Prevent double scroll bar when collaborations tool opens
Fixes PLAT-1608

Test Plan:
 - Create enough collaborations that the browser is forced
   to scroll to see all of them in the list of collaborations
 - launch one of the collaborations tools from + Collaboraiton
 - Notice that when the tool opens there isn't a double scroll bar

Reviewed-on: https://gerrit.instructure.com/82544
Tested-by: Jenkins
QA-Review: Deepeeca Soundarrajan <dsoundarrajan@instructure.com>
Product-Review: Matthew Sessions <msessions@instructure.com>

--- a/app/stylesheets/pages/react_collaborations/_CollaborationsApp.scss
+++ b/app/stylesheets/pages/react_collaborations/_CollaborationsApp.scss
@@ -1,3 +1,8 @@
+/* prevent double scroll bar when modal is open and the body is scrollable */
+.collaborations.ReactModal__Body--open {
+  overflow: hidden;
+}
+
 .GettingStartedCollaborations {
     width: 600px;
     margin: 0 auto;
@@ -31,6 +36,7 @@
   overflow: auto;
   outline: none;
   padding: 0;
+  overflow-y: hidden;
 }
 
 .Collaborations-iframe {
